add json resume parser
